<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wifiloc.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/section_label"
        android:layout_marginTop="88dp"
        android:text="Status:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/tvWifiCellId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/selfLocalisation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/tvWifiCellLocationString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/section_label"
        android:layout_below="@+id/section_label"
        android:layout_marginTop="34dp"
        android:text="@string/locProvider"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/tSelfLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/section_label"
        android:layout_below="@+id/section_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/tLocProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/tvWifiCellLocationString"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/tLocStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tScanStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tLocStatus"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tDevFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tScanStatus"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tDevFound"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvBearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tErrors"
        android:layout_alignLeft="@+id/bSetGps"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/bSetGps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_localize" />

    <Button
        android:id="@+id/bStartScan"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/icon_qscan"
        android:text="@string/startScan" />

</RelativeLayout>
